# flask-restless-datamodel

./: .coveragerc  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: test-and-build.yml
docs/: conf.py  index.rst
docs/notes/: quickstart.rst
flask_restless_datamodel/: __init__.py  cli.py  datamodel.py  helpers.py  patches.py  render.py
tests/: conftest.py  test_datamodel.py
