[metadata]
name = flask-restless-datamodel
author = See AUTHORS
author-email = "TODO@gmail.com"
summary = Server side code to expose a datamodel for the flask-restless client
description-file = README.rst
home-page = https://github.com/maarten-dp/flask-restless-datamodel
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    License :: MIT license
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages = flask_restless_datamodel

# add datafile to be included in your distribution packages here, ex:
#data-files =
#    data = data/*
#    frontend = frontend/dist/*

## CLI settings
#[entry_points]
#console_scripts =
#    flask_restless_datamodel = flask_restless_datamodel.cli:__main__

[build_sphinx]
project = flask_restless_datamodel
source-dir = docs
build-dir = docs/build

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

[flake8]
exclude = */migrations/*,*/south_migrations/*
max-line-length = 100
ignore =
  # W503: line break before binary operator
  W503,

  # W504: line break after binary operator
  W504,

[isort]
line_length = 100

[yapf]
indent_dictionary_value = true
allow_split_before_dict_value = false
