[metadata]
name = flask-restless-datamodel
author = Maarten De Paepe
author-email = "maarten.de.paepe@gmail.com"
summary = Server side code to expose a datamodel for the flask-restless client
description-file = README.md
long-description = long_description
long-description-content-type = text/markdown
home-page = https://github.com/maarten-dp/flask-restless-datamodel
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages = flask_restless_datamodel

[pbr]
warnerrors = True

[wheel]
universal = 1

[flake8]
exclude = */migrations/*,*/south_migrations/*
max-line-length = 100
ignore =
  # W503: line break before binary operator
  W503,

  # W504: line break after binary operator
  W504,

[isort]
line_length = 100

[yapf]
indent_dictionary_value = true
allow_split_before_dict_value = false
