[metadata]
name = flask-restless-datamodel
author = Maarten De Paepe
author-email = "maarten.de.paepe@gmail.com"
summary = Server side code to expose a datamodel for the flask-restless client
description-file = README.md
long-description = long_description
long-description-content-type = text/markdown
home-page = https://github.com/maarten-dp/flask-restless-datamodel
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[files]
packages = flask_restless_datamodel

[pbr]
warnerrors = True

[wheel]
universal = 1
